[project]
name = "hidden-transmission-tunnel-backend"
version = "0.1.0"
description = "FastAPI backend for Hidden Transmission Tunnel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "redis[hiredis]>=6.0.0",
  "motor>=3.7.0",
  "pydantic-settings>=2.10.0",
  "PyNaCl>=1.5.0",
  "PyJWT>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
